docs/pages/versions/v57.0.0/sdk/ui/jetpack-compose/column.mdx
---
title: Column
description: A Jetpack Compose Column component for placing children vertically.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

> **info** For cross-platform usage, see the universal [`Column`](../universal/column) — it renders the appropriate native component per platform.

Expo UI Column matches the official Jetpack Compose [Column](https://developer.android.com/reference/kotlin/androidx/compose/foundation/layout/package-summary#Column) API and places children vertically with configurable arrangement and alignment.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/column/android-light.webp"
  darkSrc="/static/images/expo-ui/column/android-dark.webp"
  alt="Three colored boxes stacked vertically inside a Column"
/>

## Installation

<APIInstallSection />

## Usage

`Column` places children vertically. Use `verticalArrangement` and `horizontalAlignment` to control spacing and alignment.

<ComponentExample
  title="ColumnExample.tsx"
  src="/static/images/expo-ui/examples/column-basic-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/column-basic-android-dark.webp"
  alt="Three labels, First, Second, and Third, stacked vertically and centered horizontally">

```tsx
import {
  Host,
  Column,
  Text,
  useMaterialColors,
} from '@expo/ui/jetpack-compose';
import {
  fillMaxWidth,
  paddingAll,
} from '@expo/ui/jetpack-compose/modifiers';

export default function ColumnExample() {
  const colors = useMaterialColors();

  return (
    <Host style={{ flex: 1 }}>
      <Column
        verticalArrangement={{ spacedBy: 8 }}
        horizontalAlignment="center"
        modifiers={[fillMaxWidth(), paddingAll(16)]}>
        <Text style={{ fontSize: 28 }} color={colors.onBackground}>
          First
        </Text>
        <Text style={{ fontSize: 28 }} color={colors.onBackground}>
          Second
        </Text>
        <Text style={{ fontSize: 28 }} color={colors.onBackground}>
          Third
        </Text>
      </Column>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { Column } from '@expo/ui/jetpack-compose';
```

<APISection
  packageName="expo-ui/jetpack-compose/column"
  apiName="Column"
/>
